--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ div.body {
     min-height: 100vh;
     min-width: 100vw;
 
-    background-color: rgba(45, 126, 151, 0.699);
+    background: rgb(2,0,36);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,212,255,0.830427239255077) 100%);
 }
 section {
     display: flex;
@@ -17,7 +18,7 @@ section {
     min-width: 500px;
     min-height: 100vh;
 
-    background-color: rgba(255, 254, 232, 0.678);
+    background-color: rgba(255, 254, 232, 0.89);
 }
 h1 {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
