--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ div.body {
     min-height: 100vh;
     min-width: 100vw;
 
-    background: rgb(2,0,36);
-    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,212,255,0.830427239255077) 100%);
+    background: rgb(74,91,175);
+    background: radial-gradient(circle, rgba(74,91,175,1) 0%, rgba(72,70,252,1) 100%);
 }
 section {
     display: flex;
@@ -17,21 +17,26 @@ section {
     max-width: 70%;
     min-width: 500px;
     min-height: 100vh;
-
-    background-color: rgba(255, 254, 232, 0.89);
 }
 h1 {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-shadow: rgb(235, 127, 127) 1px 1px;
-    font-size: 5vh;
+    font-size: 4vh;
+    font-weight: 700;
+    color: white;
 }
 p {
-    font-size: 1em;
+    font-size: 1.5em;
+    font-weight: 700;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+
 }
 
 canvas {
     width: 500px;
+
+    border: 8px solid white;
+    border-radius: 3%;
 }
 
 @media screen and (max-width: 500px){
